<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Semitone</string>

    <!-- SETTINGS -->

    <string name="settings_title">Settings</string>
    <string name="settings_global">Global settings</string>
    <string name="settings_metronome">Metronome</string>
    <string name="settings_piano">Piano</string>

    <string name="about_title">About</string>
    <string name="about_file">about.html</string>

    <string name="concert_a_title">A4 pitch</string>
    <string name="concert_a_summary">Set the frequency of A4 (for alternative tunings)</string>
    <string name="concert_a_dialog">A4 pitch (in Hz)</string>

    <string name="notenames_title">Note names</string>
    <string name="notenames_summary">Notation used for the tuner and for piano key labels</string>

    <string name="keeptick_title">Tick in background</string>
    <string name="keeptick_summary">Continue playing sound after app is closed</string>

    <string name="sustain_title">Sustain</string>
    <string name="sustain_summary">If disabled, pressing a key will play a piano sound; if enabled, a synthesized sound will play while a key is held and stop when the key is released</string>

    <string name="labelnotes_title">Label notes</string>
    <string name="labelnotes_summary">Show note names on piano keys</string>

    <string name="labelc_title">Label only C</string>
    <string name="labelc_summary">Show note name for C only</string>

    <!-- TAB-SPECIFIC -->

    <string name="tuner_title">Tuner</string>
    <string name="cents">cents</string>
    <string name="micperm">tap to grant microphone permission</string>

    <string name="metronome_title">Metronome</string>
    <string name="tempo_label">tempo</string>
    <string name="beats_label">beats</string>
    <string name="subdiv_label">subdiv</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="tap_tempo_btn">Tap tempo</string>

    <string name="piano_title">Piano</string>

    <string name="piano_add_row">Add row</string>
    <string name="piano_remove_row">Remove row</string>
    <string name="piano_add_col">Add column</string>
    <string name="piano_remove_col">Remove column</string>
    <string name="piano_octave_left">Octave left</string>
    <string name="piano_key_left">Key left</string>
    <string name="piano_key_right">Key right</string>
    <string name="piano_octave_right">Octave right</string>
    <string name="piano_reset_view">Reset view</string>

</resources>
