<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <Preference
        android:title="@string/about_title">

        <intent
            android:targetPackage="mn.tck.semitone"
            android:targetClass="mn.tck.semitone.AboutActivity" />

    </Preference>

    <PreferenceCategory
        android:title="@string/settings_global">

        <EditTextPreference
            android:key="concert_a"
            android:title="@string/concert_a_title"
            android:summary="@string/concert_a_summary"
            android:dialogTitle="@string/concert_a_dialog"
            android:inputType="number"
            android:defaultValue="440" />

        <ListPreference
            android:key="notenames"
            android:title="@string/notenames_title"
            android:summary="@string/notenames_summary"
            android:entries="@array/notenames_entries"
            android:entryValues="@array/notenames_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_metronome">

        <SwitchPreferenceCompat
            android:key="keeptick"
            android:title="@string/keeptick_title"
            android:summary="@string/keeptick_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_piano">

        <SwitchPreferenceCompat
            android:key="sustain"
            android:title="@string/sustain_title"
            android:summary="@string/sustain_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="labelnotes"
            android:title="@string/labelnotes_title"
            android:summary="@string/labelnotes_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:dependency="labelnotes"
            android:key="labelc"
            android:title="@string/labelc_title"
            android:summary="@string/labelc_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
